@@ -9,6 +9,8 @@
 
   o  new generic `survFit'
 
+  o  cosmetics for trace = TRUE
+
 
 		CHANGES in `mboost' VERSION 1.0-1 (2007-12-09)
 
